--- a/k8s/mcm/subscription.yaml
+++ b/k8s/mcm/subscription.yaml
@@ -12,6 +12,11 @@ spec:
     placementRef:
       kind: PlacementRule
       name: {APPNAME}-placementrule
+  overrides:
+   - clusterName: "/"
+     clusterOverrides:
+      - path: "metadata.namespace"
+        value: {QANS}
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
@@ -27,6 +32,11 @@ spec:
     placementRef:
       kind: PlacementRule
       name: {APPNAME}-placementrule
+  overrides:
+   - clusterName: "/"
+     clusterOverrides:
+      - path: "metadata.namespace"
+        value: {QANS}
 ---
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
@@ -42,3 +52,8 @@ spec:
     placementRef:
       kind: PlacementRule
       name: {APPNAME}-placementrule
+  overrides:
+   - clusterName: "/"
+     clusterOverrides:
+      - path: "metadata.namespace"
+        value: {QANS}
