--- a/k8s/mcm/subscription.yaml
+++ b/k8s/mcm/subscription.yaml
@@ -1,53 +1,16 @@
 apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
-  name: {APPNAME}-deployment-subscription
+  name: {APPNAME}-subscription-qa
   namespace: {DEVOPSNS}
   labels:
     appgroup: {APPNAME}
 spec:
-  channel: {APPNAME}-channel
-  name: {APPNAME}-deployment
-  placement:
-    placementRef:
-      kind: PlacementRule
-      name: {APPNAME}-placementrule
-  overrides:
-   - clusterName: "/"
-     clusterOverrides:
-      - path: "metadata.namespace"
-        value: {QANS}
----
-apiVersion: apps.open-cluster-management.io/v1
-kind: Subscription
-metadata:
-  name: {APPNAME}-service-subscription
-  namespace: {DEVOPSNS}
-  labels:
-    appgroup: {APPNAME}
-spec:
-  channel: {APPNAME}-channel
-  name: {APPNAME}-service
-  placement:
-    placementRef:
-      kind: PlacementRule
-      name: {APPNAME}-placementrule
-  overrides:
-   - clusterName: "/"
-     clusterOverrides:
-      - path: "metadata.namespace"
-        value: {QANS}
----
-apiVersion: apps.open-cluster-management.io/v1
-kind: Subscription
-metadata:
-  name: {APPNAME}-route-subscription
-  namespace: {DEVOPSNS}
-  labels:
-    appgroup: {APPNAME}
-spec:
-  channel: {APPNAME}-channel
-  name: {APPNAME}-route
+  channel: {DEVOPSNS}/{APPNAME}-channel
+  packageFilter:
+    labelSelector:
+      matchLabels:
+        appgroup: {APPNAME}
   placement:
     placementRef:
       kind: PlacementRule
